# sado-restaurant-map

./: .coverage  .editorconfig  .env.example  .env.integration  .env.local.example  .env.production  .gitignore  .markdownlint.json  .markdownlintignore  .npmrc  .powershellrc.ps1  .prettierignore  .prettierrc.json  .size-limit.json  ARCHITECTURE_DECISIONS.md  DEPLOY_GUIDE.md  DEVELOPMENT_ROADMAP.md  GOOGLE_ANALYTICS_GUIDE.md  IMPLEMENTATION_GUIDE.md  LICENSE  PROJECT_ROADMAP.md  PROJECT_ROADMAP_CORRECTED.md  PROJECT_STRUCTURE_OPTIMIZATION_ROADMAP.md  README.md  ROOT_DIRECTORY_ORGANIZATION_ROADMAP.md  ai-prompts.md  analyze-cuisine.js  copilot-instructions.md  coupling-analysis-report.json  coverage.json  database-operations.ps1  dependency-graph.json  docker-compose.hybrid.yml  docker-compose.integration.yml  docker-compose.phase3.yml  docker-compose.production.yml  eslint.config.js  index.html  investigate-sheets.js  lighthouse-budgets.json  (+22 more)
.github/: copilot-instructions.md  dependabot.yml
assets/: google-maps-CsjYe35k.js  google-maps-CsjYe35k.js.map  index-4udfo_jL.js  index-4udfo_jL.js.map  index-D1DBXtXT.css
config/: README.md  accessibility.config.ts  eslint.config.js  vitest.config.ts
coverage/: coverage-final.json  index.html
data-platform/: .coverage  .env.example  .gitignore  README.md  coverage.json  pyproject.toml  setup.ps1
data-platform/application/: __init__.py
data-platform/application/dto/: __init__.py
data-platform/application/workflows/: __init__.py
data-platform/config/: pytest.ini  requirements.txt  service-account.json.example  setup-guide.md
data-platform/core/: __init__.py
data-platform/core/domain/: __init__.py  interfaces.py  location_service.py
data-platform/core/processors/: data_processor.py
data-platform/data/: new_places_workflow.txt  new_urls_to_convert.txt  parkings_merged.txt  place_id_mapping.json  restaurants_merged.txt
data-platform/infrastructure/: __init__.py
data-platform/infrastructure/storage/: place_id_cache.py  sheets_storage_adapter.py
data-platform/interface/: __init__.py
data-platform/scripts/: __init__.py  celery_docker_app.py  new_url_converter.py  run_production_with_cache.py  test_cost_optimization.py
data-platform/shared/: __init__.py  api_integration.py  async_processor.py  cache_service.py  celery_config.py  config.py  container.py  error_handler.py  ml_engine.py  performance_monitor.py  smart_orchestrator.py
data-platform/shared/constants/: __init__.py
data-platform/shared/types/: __init__.py
data-platform/tests/: conftest.py  test_smart_orchestrator.py
data-platform/tests/integration/: test_cache_service_comprehensive.py  test_ml_engine.py  test_performance.py
data-platform/tests/results/: .gitignore
data-platform/tests/unit/: test_config.py  test_container.py  test_core_types.py  test_error_handler_comprehensive.py  test_interfaces.py  test_performance_monitor.py  test_utils.py
data-platform/tools/analysis/: check_sheets.py  check_sheets_detail.py  investigate_coordinate_filtering.py  investigate_update_logic.py
data-platform/tools/maintenance/: clear_toilets_worksheet.py  restore_worksheets.py
data-platform/tools/testing/: debug_worksheet_write.py
docker/: Dockerfile.app  Dockerfile.test  Dockerfile.worker
docs/: ACTIONABLE_TASKS.md  ANALYTICS_DASHBOARD_SETUP.md  AUTO_PRIORITY_REPORT.md  COLLAB_PROMPT.md  DEPENDENCY_ANALYSIS_REPORT.md  DEPLOY_GUIDE.md  DOCUMENT_ALIGNMENT_REPORT.md  ICOOON_COMPLETE_STRATEGY.md  ICOOON_DOWNLOAD_GUIDE.md  ICOOON_MONO_DOWNLOAD_GUIDE.md  ICOOON_SPECIFIC_URLS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_SUMMARY.md  MAINTENANCE.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE6_COMPLETION_REPORT.md  PHASE7_WEBP_AVIF_COMPLETION.md  PHASE8_LIGHTHOUSE_RESULTS.md  PHASE8_TASK1.3_METRICS_COMPARISON.md  PHASE8_TASK1_CHECKLIST.md  PHASE8_TASK2_BASELINE.md  PROJECT_ROADMAP.md  QUICK_FIX_CHECKGASTATUS.md  README.md  SECURITY_GUIDELINES.md  SHARED_GLOSSARY.md  TASKS.md  ab-test-marker-sync.md  alignment-check-log.md  performance-benchmark.json  pwa-implementation-notes.md  unified-marker-design.md
e2e/: filter-modal.spec.ts
env/: .env.development.example  .env.integration.example  .env.production.example  README.md
metrics/: size-limit.json
public/: README.md  _assets_optimization_guide.md  apple-touch-icon.avif  circular-marker-demo.html  circular-marker-integration-test.html  favicon-16x16.avif  favicon-32x32.avif  maskable-icon-512x512.avif  offline.html  og-image.avif  pwa-192x192.avif  pwa-64x64.avif
scraper/: Google Places API フィールド一覧（SKUカテゴリー別）.txt  places_data_updater.py  queries.txt  requirements.txt  restaurants.txt  scraping_and_sheets_updater.py  target_urls.txt  (+1 more)
(+807 files in other folders)
